Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -34,7 +34,7 @@
 
         <ul>
             <li>
-                <a href="http://support.ynu.edu.cn/ms17-010bu-ding-xia-zai.html">MS17-010补丁下载</a> &mdash; Mon 15 May 2017
+                <a href="http://support.ynu.edu.cn/le-suo-bing-du-bu-ding-xiao-nei-xia-zai.html">勒索病毒补丁校内下载</a> &mdash; Mon 15 May 2017
             </li>
             <li>
                 <a href="http://support.ynu.edu.cn/yun-nan-da-xue-itzi-yuan-shen-qing-biao.html">云南大学IT资源申请表</a> &mdash; Mon 06 March 2017
