--- a/tags.html
+++ b/tags.html
@@ -33,8 +33,8 @@
         <h1>Tags for 信息技术中心 运维服务部 （65031141）</h1>
 
         <ul>            <li><a href="http://support.ynu.edu.cn/tag/chrome.html">Chrome</a> (1)</li>
+            <li><a href="http://support.ynu.edu.cn/tag/le-suo-bing-du-bu-ding.html">勒索病毒补丁</a> (1)</li>
             <li><a href="http://support.ynu.edu.cn/tag/liu-lan-qi.html">浏览器</a> (1)</li>
-            <li><a href="http://support.ynu.edu.cn/tag/ms17-010bu-ding.html">MS17-010补丁</a> (1)</li>
             <li><a href="http://support.ynu.edu.cn/tag/shang-wang-zhang-hao.html">上网账号</a> (1)</li>
             <li><a href="http://support.ynu.edu.cn/tag/shen-qing-liu-cheng.html">申请流程</a> (3)</li>
             <li><a href="http://support.ynu.edu.cn/tag/shi-yong-zhi-dao.html">使用指导</a> (1)</li>
